Improved Loadingscreen and UX
Moved SQL Query to Splashscreen instead of Form1, and added loading gif and other useful info to user on splashscreen.

--- a/ReportsApplication1/Properties/Resources.resx
+++ b/ReportsApplication1/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="sandbergs-logo-e1456731172110" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sandbergs-logo-e1456731172110.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Eclipse_1_4s_200px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eclipse-1.4s-200px.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
